== Released [attachment:wiki:SoftwareReleases:eLife-1.6a16.zip V1.6a16] [attachment:wiki:SoftwareReleases:eLife-1.6a16-libs.zip Libs-V1.6a16 ]==

''' General '''

Mods to build scripts to ensure Groovy libraries are included


''' CBUS '''

Fixed bug with startup synchronizing


''' Comfort '''

Fixed bug with comfort startup synchronizing

== Released [attachment:wiki:SoftwareReleases:eLife-1.6a15.zip V1.6a15] [attachment:wiki:SoftwareReleases:eLife-1.6a15-libs.zip Libs-V1.6a15 ]==

''' Sign Video '''

Many bug fixes

''' Comms '''

Fixed bug where comms would not properly queue multiple serial 
messages if the system did not attend quickly enough to the 
message. Will impact many devices 

''' Jetty '''

Updated to Jetty 6.0.1

== Released [attachment:wiki:SoftwareReleases:eLife-1.6a14.zip V1.6a14] ==

''' Jetty '''

Ensure that multiple http get calls from the same session cannot conflict. if the session from a previous call is not yet complete the following call
will return an empty record set. Resolves Issue [ticket:490]

When there is no new instructions for the client to process the http return code will be set to SC_NOCONTENT. If there is content present it will be SC_OK.
In this way the get call can be processed extremely effeciently by the client. Completes enhancement [ticket:493]

''' Flash '''

Increased heartbeat speed to every 10 seconds. Need feedback from James if this is to fast for flash.


== Released [attachment:wiki:SoftwareReleases:eLife-1.6a13.zip V1.6a13] ==

''' General '''

Added daily maintenance task. An entry should be added to the bootstrap file specifying the time to run, if it is not specified the default time is 11:30PM
{{{
  <MAINTENANCE TIME="12:10" />
}}}

''' Calendar '''

Added active="Y|N" flag to calendar entries. The default is active="Y" if it is not specified.


''' Raw '''
