@@ -1,0 +1,45 @@
+/*
+ * Created on Mar 18, 2004
+ *
+ * To change the template for this generated file go to
+ * Window - Preferences - Java - Code Generation - Code and Comments
+ */
+package au.com.BI.LabelMgr;
+
+/**
+ * @author colinc
+ *
+ * To change the template for this generated type comment go to
+ * Window - Preferences - Java - Code Generation - Code and Comments
+ */
+public class LabelError extends Exception {
+	/**
+	 * 
+	 */
+	public LabelError() {
+		super();
+	}
+	
+	/**
+	 * @param arg0
+	 */
+	public LabelError(String arg0) {
+		super(arg0);
+	}
+	
+	/**
+	 * @param arg0
+	 * @param arg1
+	 */
+	public LabelError(String arg0, Throwable arg1) {
+		super(arg0, arg1);
+	}
+	
+	/**
+	 * @param arg0
+	 */
+	
+	public LabelError(Throwable arg0) {
+		super(arg0);
+	}
+}
