@@ -9,6 +9,7 @@ import au.com.BI.Command.ReturnWrapper;
 import au.com.BI.Device.DeviceType;
 import au.com.BI.Flash.ClientCommand;
 import au.com.BI.Label.Label;
+import au.com.BI.LabelMgr.LabelMgr;
 import au.com.BI.CBUS.Model;
 import au.com.BI.Util.DeviceModel;
 import junit.framework.TestCase;
@@ -20,6 +21,7 @@ import junitx.framework.ArrayAssert;
  */
 public class TestLabelFromFlash extends TestCase {
 	protected Label testLabel;
+	protected Label testLabel2;
 	private Model model = null;
 	
 	public static void main(String[] args) {
@@ -32,22 +34,22 @@ public class TestLabelFromFlash extends TestCase {
 	protected void setUp() throws Exception {
 		super.setUp();
 		model = new Model();
-		
-		testLabel = new Label( "Volume Test", DeviceType.LABEL );
+		LabelMgr labelMgr = new LabelMgr();
+		model.setLabelMgr(labelMgr);
+		testLabel = new Label( "Test", DeviceType.LABEL );
 		testLabel.setApplicationCode("38");
 		testLabel.setDefaultLabel("VOLUME");
 		testLabel.setKey("22");
 		
-		HashMap<String, String> map = new HashMap<String,String> (40);
-		map.put("Test", "Testt");
-		map.put("FRONT_LIGHT", "Front Light");
-		map.put("VOLUME_CONTROL", "Volume Level");
-		map.put("SPRINKLERS","Sprinklers");
+		testLabel2 = new Label( "Volume Test", DeviceType.LABEL );
+		testLabel2.setApplicationCode("38");
+		testLabel2.setDefaultLabel("VOLUME");
+		testLabel2.setKey("23");
 		
-		model.setCatalogueDefs("Button Labels",map);
-		model.setParameter("LABELS", "Button Labels", DeviceModel.MAIN_DEVICE_GROUP);
-
-		
+		labelMgr.addLabel("Test", "Testt");
+		labelMgr.addLabel("FRONT_LIGHT", "Front Light");
+		labelMgr.addLabel("VOLUME_CONTROL", "Volume Level");
+		labelMgr.addLabel("SPRINKLERS","Sprinklers");
 	}
 
 	/**
@@ -55,9 +57,21 @@ public class TestLabelFromFlash extends TestCase {
 	 */
 	public void testBuildCBUSLabelString() {
 		ClientCommand testCommand = new ClientCommand("VOLUME","label",null,"Test","","","","");
-		String expectedOut = '\05'+"3800A81600015465737474F0g";
+		String expectedOut = "\\05"+"3800A81600015465737474F0g\r";
 		String val = model.buildCBUSLabelString(testLabel, testCommand, "g");
 		assertEquals ("Return value for label failed",expectedOut,val);
+		//Volume Level
+		//\053800AF170001566F6C756D65204C6576656C6Ci 
 	}
 
+
+	/**
+	 * Test method for {@link au.com.BI.CBUS.Model#buildCBUSLabelString(au.com.BI.Label.Label, au.com.BI.Command.CommandInterface, java.lang.String)}.
+	 */
+	public void testBuildCBUSLabelStringVolume () {
+		ClientCommand testCommand = new ClientCommand("VOLUME","label",null,"VOLUME_CONTROL","","","","");
+		String expectedOut = "\\05"+"3800AF170001566F6C756D65204C6576656C6Ci\r";
+		String val = model.buildCBUSLabelString(testLabel2, testCommand, "i");
+		assertEquals ("Return value for volume label failed",expectedOut,val);
+	}
 }
