@@ -1,3 +1,11 @@
+''' Bootstrap '''
+
+Added INTEGRATOR_MODE ACTIVE="Y|N"  (default N) to the bootstrap file. This will later be used to provide extra debugging of running triggers and integrator macros.
+
+''' Labels '''
+
+Labels moved from config file to it's own file (labels.xml under datafiles), this will facilitate label support accross multiple devices , eg. CBUS + Dynalite
+ 
 == Released [attachment:wiki:SoftwareReleases:eLife-1.6a16.zip V1.6a16] [attachment:wiki:SoftwareReleases:eLife-1.6a16-libs.zip Libs-V1.6a16 ]==
 
 ''' General '''
